# beancount-tools

./: README.md  pyproject.toml
docs/: CLI.md  POSTPROCESSOR.md  QUICKREF.md  RULES.md
docs/example/: merchant.yaml  pay_account.yaml  rules.yaml
src/beancount_tools/: __init__.py
src/beancount_tools/cli/: __init__.py  import_cli.py  main.py  postprocess.py
src/beancount_tools/importers/: __init__.py  alipay.py  base.py  wechat.py
src/beancount_tools/processing/: __init__.py  deduplicate.py  processor.py
src/beancount_tools/rules/: __init__.py  engine.py
src/beancount_tools/utils/: __init__.py  convert.py  helpers.py
tools/: xlsx_to_csv.py
