[project]
name = "beancount-tools"
version = "0.2.0"
description = "Beancount importers and transaction processing tools for Chinese financial institutions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "beancount>=3.2.0",
    "beanquery>=0.2.0",
    "click>=8.1.0",
    "dateparser>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
bct = "beancount_tools.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
